--- a/csbox/static/css/signin.css
+++ b/csbox/static/css/signin.css
@@ -33,6 +33,19 @@ form {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
+form .message{
+    width: 100%;
+    height: 60px;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid red;
+    color: red;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 label {
     display: block;
     font-weight: bold;
@@ -85,16 +98,34 @@ input[type="submit"]:hover {
     line-height: 1.5rem;
 }
 
-.notification{
+.notificationGreen{
     width: 400px;
     top: 180px;
-    padding: 20px 10px;
+    padding: 20px 20px;
     background-color: #07ebe073;
-    color: rgb(2, 145, 16);
+    z-index: 999;
+    color: rgb(0, 126, 0);
+    display: flex;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+}
+.notificationYellow{
+    width: 400px;
+    top: 180px;
+    padding: 20px 20px;
+    background-color: #eeec5283;
+    color: rgb(247, 60, 60);
     z-index: 999;
     display: flex;
     border-radius: 5px;
     justify-content: center;
     align-items: center;
     margin-bottom: 5px;
+}
+.notification p{
+    text-align: center;
+    font-size: 1.1rem;
+    line-height: 1.3rem;
 }
