--- a/csbox/static/css/student_registration.css
+++ b/csbox/static/css/student_registration.css
@@ -26,7 +26,18 @@ form {
     border-radius: 5px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
-
+form .message{
+    width: 100%;
+    height: 60px;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid red;
+    color: red;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .double{
     width: 100%;
     display: flex;
