--- a/csbox/templates/notification.html
+++ b/csbox/templates/notification.html
@@ -17,7 +17,7 @@
         <div class="signin-form">
             <h2>{{title}}</h2>
             <div class="notification">
-                <p>{{notification}} {%if login%}<a href="{%url 'signin'%}">Sign In</a>{%endif%}</p>
+                <p>{{notification}} {%if login%}<a class="sign" href="{%url 'signin'%}">Sign In</a>{%endif%}</p>
             </div>
         </div>
     </div>
