--- a/csbox/static/css/layout.css
+++ b/csbox/static/css/layout.css
@@ -6,6 +6,7 @@
 }
 
 
+
 .main-content{
     min-height: 100vh;
     display: flex;
@@ -25,6 +26,7 @@
     justify-content: center;
     align-items: center;
     color: white;
+    z-index: 999;
 }
 .container{
     width: 85%;
@@ -40,11 +42,43 @@
     align-items: center;
     color: white;
 }
+.branding_section{
+  width: 260px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.branding_section .all_courses{
+  text-decoration: none;
+  color: white;
+}
 .branding h1{
     font-size: 1.7rem;
     margin-left: .5rem;
     font-weight: 400;
 }
+
+.avatar{
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+  border-radius: 50%;
+  background-color: red;
+  overflow: hidden;
+}
+.dropdown-btn_div {
+  display: flex;
+  align-items: center;
+  color: white;
+  padding: 6px 16px 6px 10px;
+  border:1px solid #10B0A7;
+  font-size: 16px;
+  cursor: pointer;
+  position: relative;
+}
+
+
 
 .dropdown-btn {
     background-color: #10B0A7;
@@ -56,16 +90,18 @@
     position: relative;
   }
   
-  .dropdown-content {
+  .dropdown-content{
     position: absolute;
     display: none;
-    z-index: 1;
+    z-index: 999;
     right: 109px;
     bottom: -85px;
     width: 130px;
     background-color: #0A4D68;
     box-shadow: 2px 2px 10px black;
   }
+
+ 
   
   .dropdown-content a {
     color: white;
