--- a/csbox/templates/teacher/home.html
+++ b/csbox/templates/teacher/home.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Teacher Home page
-</body>
-</html>
+{%extends 'layout.html'%}
+
+{%load static%}
+
+{%block title%}
+    Home | CSBox - Educational Platform
+{%endblock title%}
+
+{%block link%} 
+    <link rel="stylesheet" href="{%static 'css/teacher/home.css'%}"/>
+{%endblock link%}
+
+{%block script%}{%endblock script%}
+
+{%block content%}
+    
+    <h1>This is Teacher Home page</h1>
+    
+{%endblock content%}
