--- a/csbox/templates/layout.html
+++ b/csbox/templates/layout.html
@@ -48,7 +48,7 @@
             {%endif%}
             
             {%if request.user.is_authenticated%}
-            <a class="all_courses" href="{%url 'courses'%}">All Courses</a>
+            <a class="all_courses" href="{%url 'courses'%}">Session</a>
             {%endif%}
         </div>
         {%if request.user.is_authenticated%}
