--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -41,3 +41,109 @@
     font-weight: bold;
     color: black;
 }
+
+.other_info{
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+    width: 400px;
+    height: 430px;
+    /* background-color: yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.other_info_header{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.other_info_btn{
+    width: 48%;
+    height: 100%;
+    background:none;
+    border: 1px solid #10B0A7;
+    cursor: pointer;
+    transition: all .2s ease;
+}
+.other_info_btn:hover{
+    background-color: #10B0A7;
+    color: white;
+}
+.active{
+    background-color: #10B0A7;
+    color: white;
+}
+.other_info_details{
+    width: 100%;
+    height: 88%;
+    background-color: rgb(223, 223, 223);
+    box-shadow: inset 0 0 6px 3px rgba(0, 0, 0, 0.3);
+}
+.repo_section{
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    overflow: scroll;
+}
+.member_section{
+    display: none;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    overflow: scroll;
+}
+
+
+.post_section{
+    position: absolute;
+    right: 0;
+    top: 20px;
+    width: 780px;
+    height:738px;
+    /* background-color: crimson; */
+}
+
+.post_btn{
+    width: 100%;
+    height: 6%;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border: 1px solid #10B0A7;
+    transition: all .2s ease;
+}
+.post_btn:hover{
+    background-color:#10B0A7;
+    color: white;
+}
+
+.popupContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.661);
+}
+
+.popupContent {
+    background-color: white;
+    width: 500px;
+    padding: 20px;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+.popupContent h2 {
+    text-align: center;
+    margin-bottom: 1.2rem;
+}
