--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -77,9 +77,8 @@
 .other_info_details{
     width: 100%;
     height: 88%;
-    background-color: #0A4D68;
-    color: white;
-    box-shadow: inset 0 0 10px 5px rgba(0, 0, 0, 0.3);
+    background-color: #dfdfdf;
+    color: rgb(8, 112, 247);
 }
 .repo_section{
     width: 100%;
@@ -99,24 +98,91 @@
 .post_section{
     position: absolute;
     right: 0;
-    top: 20px;
+    /* top: 20px; */
     width: 780px;
     height:738px;
-    /* background-color: crimson; */
+    overflow: scroll;
+    padding-right: 1.5rem;
+    padding-top: 20px;
 }
 
 .post_btn{
-    width: 100%;
+    width: 40%;
     height: 6%;
-    font-size: 1.1rem;
+    font-size: 1rem;
+    font-weight: bold;
     cursor: pointer;
-    border: 1px solid #10B0A7;
+    background:none;
+    border: 2.2px solid #10B0A7;
     transition: all .2s ease;
 }
 .post_btn:hover{
     background-color:#10B0A7;
     color: white;
 }
+
+.post_wraper{
+    width: 100%;
+    height:693px;
+}
+
+.post-card{
+    width: 100%;
+    padding: 2rem 0;
+    margin: 1.5rem 0;
+    padding: 10px;
+    border: 1.5px solid black;
+    position: relative;
+}
+.post-card-red{
+    width: 100%;
+    padding: 2rem 0;
+    margin: 1.5rem 0;
+    padding: 10px;
+    border: 3px solid red;
+    position: relative;
+}
+.card-heading-warper{
+    margin-bottom: 10px;
+}
+.post-heading{
+    width: 93%;
+    font-weight: 200;
+    font-size: 1.1rem;
+    margin-bottom: 3px;
+}
+.bold{
+    font-weight:600;
+}
+.tiny{
+    font-size: 1rem;
+    font-weight: 300;
+}
+.post-body{
+    padding: 1rem 0;
+    width: 95%;
+}
+.post-body .body-text-normal{
+    font-size: 1.45rem;
+    font-weight: 300;
+    line-height: 1.9rem;
+}
+.post-body .body-text-small{
+    font-size: 1.15rem;
+    font-weight: 300;
+    line-height: 1.9rem;
+}
+
+.post-toggle-btn{
+    position: absolute;
+    top:5px;
+    right: 5px;
+    padding:5px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
 
 .popupContainer {
     display: none;
@@ -166,6 +232,9 @@
     background: white;
     border: none;
     box-shadow: 0 0 2px 2px rgb(36, 36, 36);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: all .2s ease;
 }
 .popupContent button:hover{
@@ -173,7 +242,9 @@
     color: white;
     cursor: pointer;
 }
-
+.fas{
+    margin-right: 4px;
+}
 .form-group {
     margin-bottom: 15px;
     border: 1px solid #ccc;
