--- a/csbox/templates/teacher/single_course.html
+++ b/csbox/templates/teacher/single_course.html
@@ -1,7 +1,7 @@
 {%extends 'layout.html'%}
 
 {%load static%}
-
+{% load humanize %}
 {%block title%}
     {{course_obj.sessionName}} | CSBox - Educational Platform
 {%endblock title%}
@@ -41,7 +41,32 @@
             </div>
         </div>
         <div class="post_section">
-            <button id="popupButton" class="post_btn">Create Post or Announcement</button>
+            <button id="popupButton" class="post_btn"><i class="fas fa-plus"></i> Create Post or Announcement</button>
+            <div class="post_wraper">
+                {%for post in posts%}
+                <div {%if post.is_announcement%} class="post-card-red"{%else%} class="post-card"{%endif%}>
+                    <div class="card-heading-warper">
+                        <h2 class="post-heading">
+                            <span class="bold">{{post.creator.first_name}} {{post.creator.last_name}}</span>
+                            {%if post.is_announcement%}Announce to{%else%}Post to{%endif%}
+                            <span class="bold">{{post.session}}</span>
+                            batch
+                            <span class="bold">{{post.session.batch}}-{{post.session.section.section}}</span>
+                            <span class="tiny"> - {{post.session.semester}}</span>
+                        </h2>
+                        <p class="time">{{post.created | timesince}} ago</p>   
+                        <p class="date">{{post.created.date}}</p>
+                    </div>
+                    <div class="post-body">
+                        <h2 class="{%if post.postBody|length < 100%}body-text-normal{%else%}body-text-small{%endif%}">{{post.postBody}}</h2>
+                    </div>
+                    <div class="comment-section"></div>
+                    
+                    <!-- toggle button section -->
+                    <button class="post-toggle-btn"><i class="fas fa-ellipsis-h"></i></button>
+                </div>
+                {%endfor%}
+            </div>
         </div>
     </div>
     <div id="popupContainer" class="popupContainer">
