--- a/csbox/templates/teacher/all_courses.html
+++ b/csbox/templates/teacher/all_courses.html
@@ -79,7 +79,7 @@
                     <form method="POST">
                         {%csrf_token%}
                         <div class="form-group">
-                            <input type="text" id="sessionName" name="sessionName" placeholder="Session Name">
+                            <input type="text" id="sessionName" name="sessionName" placeholder="Session Name" required>
                         </div>
             
                         <div class="form-group">
