--- a/csbox/templates/teacher/single_course.html
+++ b/csbox/templates/teacher/single_course.html
@@ -44,6 +44,8 @@ document.addEventListener("DOMContentLoaded", function() {
       }
     });
   });
+
+
 });
 </script>
 {%endblock script%}
@@ -98,16 +100,22 @@ document.addEventListener("DOMContentLoaded", function() {
                     </div>
                     <div class="comment-section"></div>
                     
-                    <!-- toggle button section -->
+                    <!-- toggle 3 dots button -->
                     <button class="toggle-button" data-popup="p{{post.id}}">
                         <i class="fas fa-ellipsis-h"></i>
                     </button>
 
-                    <!-- toggle section -->
+                    <!-- popup section of 3 dots button and button for delete and edit -->
                     <div class="toggle-section" id="p{{post.id}}">
                         <div class="toggle-section-wraper">
-                            <button >Delete</button>
-                            <button >Edit</button>
+                            <button class="post-deleteBtn" >Delete</button>
+                        </div>
+                    </div>
+
+                    <!-- delete post popup -->
+                    <div class="post-delPopup">
+                        <div class="post-delContent">
+                            Delete
                         </div>
                     </div>
                 </div>
@@ -115,6 +123,9 @@ document.addEventListener("DOMContentLoaded", function() {
             </div>
         </div>
     </div>
+
+
+    <!-- create post popup -->
     <div id="popupContainer" class="popupContainer">
         <div class="popupContent">
             <h2>Create Post or Announcement</h2>
